--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "@emotion/styled": "^11.9.3",
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.8.4",
+    "@mui/system": "^5.8.5",
+    "@mui/x-data-grid": "^5.12.2",
     "next": "12.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "sass": "^1.52.3"
+    "sass": "^1.52.3",
+    "typescript": "^4.7.4"
   },
   "devDependencies": {
     "eslint": "8.18.0",
