--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "@mui/system": "^5.8.5",
     "@mui/x-data-grid": "^5.12.2",
     "next": "12.1.6",
+    "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sass": "^1.52.3",
-    "typescript": "^4.7.4"
+    "typescript": "^4.7.4",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "eslint": "8.18.0",
