--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
     "@mui/icons-material": "^5.8.4",
+    "@mui/lab": "^5.0.0-alpha.87",
     "@mui/material": "^5.8.4",
     "@mui/system": "^5.8.5",
     "@mui/x-data-grid": "^5.12.2",
